2008-08-11  Wenji Huang  <wenji.huang@oracle.com>

	* tapsets.cxx : Fixed compilation warning on gcc 3.x.

2008-08-11  Frank Ch. Eigler  <fche@elastic.org>

	* tapsets.cxx (translate_final_fetch_or_store): Reject some
	unhandleable types such as floats.
	(dwarf_var...visit_target_symbol): Tweak logic of $$var expansion
	to quietly skip over any $context variables that cause exceptions.

2008-08-11  Frank Ch. Eigler  <fche@elastic.org>

	* tapsets.cxx (dwarf_var_expanding...visit_target_symbol):
	Don't add a \n at the end of $$vars/$$parms/$$locals.

2008-08-11  Frank Ch. Eigler  <fche@elastic.org>

	PR5049
	* tapsets.cxx (cu_name_matches, collect_srcfiles_matching):
	Implicitly but optionally prefix probe source filenames with "*/".
	* stapprobes.5.in: Document this.

2008-08-11  Dave Brolley  <brolley@redhat.com>

	* stap-client (disconnect_from_server): Call after receive_response.
	* stap-server (stap_rc): Renamed from 'rc'. Don't use it as an exit
	code.
	* stap-serverd (listen): Set pipefail so that we get the rc of nc
	if it fails. Make multiple attempts to establish a server.
	(fatal): Call 'terminate'.

2008-08-11  Frank Ch. Eigler  <fche@elastic.org>

	PR5049
	* tapsets.cxx (cu_name_matches, collect_srcfiles_matching):
	Implicitly prefix probe source filenames with "*".

2008-08-11  David Smith  <dsmith@redhat.com>

	* tapsets.cxx (utrace_builder::build): Fixed indentation.

2008-08-11  Mark Wielaard  <mwielaard@redhat.com>

	* Makefile.am (install-data-local): Use INSTALL_PROGRAM for executable
	stp scripts.
	* Makefile.in: Regenerated.

2008-08-09  Frank Ch. Eigler  <fche@elastic.org>

	* Makefile.am (example index): Only warn and instruct on index
	regeneration.  Do not actually perform it as the source tree
	should be considered (and can really be) read-only.
	* Makefile.in: Regenerated.

2008-08-08  Dave Brolley  <brolley@redhat.com>

	* stap-client: Use quotes when echoing. Exit with $rc.
	(initialization): Initialize 'rc'.