@@ -15,6 +15,7 @@ set syscall_script {"probe process(\"/bin/ls\").syscall { printf(\"|%d\", \$sysc
 set syscall_return_script {"probe process(\"/bin/ls\").syscall.return { printf(\"|%d\", \$syscall) }"}
 set thread_begin_script {"probe process(\"/bin/ls\").thread.begin { print(\"ls thread.begin\") }"}
 set thread_end_script {"probe process(\"/bin/ls\").thread.end { print(\"ls thread.end\") }"}
+set all_begin_script {"probe process(\"*\").begin { print(\"begin\") }"}
 
 set pid_begin_script {"probe process(123).begin { print(\"123 begin\") }"}
 set pid_end_script {"probe process(123).end { print(\"123 end\") }"}
@@ -127,4 +128,12 @@ if {$utrace_support_found == 0} {
 } else {
     # Try compiling an thread.end script using a pid
     stap_compile $TEST_NAME 1 $pid_thread_end_script
+}
+
+set TEST_NAME "UTRACE_P4_07"
+if {$utrace_support_found == 0} {
+    untested "$TEST_NAME : no kernel utrace support found"
+} else {
+    # Try compiling an begin script using a path of "*"
+    stap_compile $TEST_NAME 1 $all_begin_script
 }
