@@ -1,3 +1,11 @@
+2008-08-12  David Smith  <dsmith@redhat.com>
+
+	PR 6445 (partial)
+	* task_finder.c (stap_register_task_finder_target): Handles
+	probing all threads.
+	(__stp_utrace_attach_match_filename): Ditto.
+	(stap_start_task_finder): Ditto.
+
 2008-08-08  David Smith  <dsmith@redhat.com>
 
 	* task_finder.c (stap_utrace_detach): New function.
