@@ -1,3 +1,9 @@
+2008-08-12  David Smith  <dsmith@redhat.com>
+
+	PR 6445 (partial)
+	* systemtap.base/utrace_p4.exp: Added test that probes all threads.
+	* semko/utrace14.stp: New test.
+
 2008-08-11  Frank Ch. Eigler  <fche@elastic.org>
 
 	* systemtap.base/vars.exp: Adjust to loss of "\n" at end of $$vars
